--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,21 +36,22 @@ dependencies {
     implementation 'androidx.annotation:annotation:1.6.0'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation "androidx.camera:camera-core:1.2.2"
-    implementation "androidx.camera:camera-camera2:1.2.2"
-    implementation "androidx.camera:camera-lifecycle:1.2.2"
-    implementation "androidx.camera:camera-video:1.2.2"
-    implementation "androidx.camera:camera-view:1.2.2"
-    implementation "androidx.camera:camera-extensions:1.2.2"
+//    implementation "androidx.camera:camera-core:1.2.2"
+//    implementation "androidx.camera:camera-camera2:1.2.2"
+//    implementation "androidx.camera:camera-lifecycle:1.2.2"
+//    implementation "androidx.camera:camera-video:1.2.2"
+//    implementation "androidx.camera:camera-view:1.2.2"
+//    implementation "androidx.camera:camera-extensions:1.2.2"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.github.bumptech.glide:glide:4.15.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+//    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+//    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.picasso:picasso:2.8'
     implementation 'com.google.code.gson:gson:2.10.1'
+
 
     implementation(platform("com.google.firebase:firebase-bom:33.7.0"))
     implementation("com.google.firebase:firebase-auth")
