--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,27 +12,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Knjigomat">
         <activity
-            android:name=".ui.activities.BookActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ui.activities.PocetnaActivity"
-            android:windowSoftInputMode="adjustResize"
-            android:exported="false" />
-        <activity
             android:name=".ui.activities.RegisterActivity"
             android:exported="false" />
+
         <activity
             android:name=".ui.activities.LoginActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ui.activities.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".ui.activities.MainActivity"
+            android:exported="false"></activity>
 
         <meta-data
             android:name="preloaded_fonts"
