--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,11 @@
     package="com.example.knjigomat">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <!--    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />-->
-    <!--    <uses-permission android:name="android.permission.CAMERA" />-->
-    <!--    <uses-permission android:name="android.permission." />-->
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+    <uses-permission android:name="android.permission.WRITE_MEDIA_IMAGES" />
 
     <application
         android:allowBackup="true"
@@ -28,6 +30,10 @@
         </activity>
         <activity
             android:name=".ui.activities.MainActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".chat.screen5"
             android:exported="false" />
 
         <meta-data
