--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,11 +3,6 @@
     package="com.example.knjigomat">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
-    <uses-permission android:name="android.permission.WRITE_MEDIA_IMAGES" />
 
     <application
         android:allowBackup="true"
@@ -17,10 +12,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Knjigomat">
         <activity
+            android:name=".ui.activities.CameraActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:exported="false"
+            android:label="@string/title_activity_camera"
+            android:theme="@style/Theme.Knjigomat.Fullscreen" />
+        <activity
             android:name=".ui.activities.RegisterActivity"
             android:exported="false" />
         <activity
             android:name=".ui.activities.LoginActivity"
+            android:exported="false">
+
+        </activity>
+        <activity
+            android:name=".ui.activities.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,11 +35,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.activities.MainActivity"
-            android:exported="false" />
-
-        <activity
-            android:name=".chat.screen5"
+            android:name=".chat.ConversationActivity"
             android:exported="false" />
 
         <meta-data
